     ASTs, very Java specific at this time.
   o Do we have a rule to style check for multiple declarations and chained
     assignments? (e.g. int a, b;  int a = b = x;)
   o Need to refactor the regression test packages to reflect new packaging.
   o Rework these packages to exist with the net.sourceforge.pmd.lang.* hierarchy:
        net.sourceforge.pmd.dfa
        net.sourceforge.pmd.jaxen
        net.sourceforge.pmd.symboltables
        net.sourceforge.pmd.typeresolution
        net.sourceforge.pmd.properties
   o Need a JUnit test to check for "dead" Rules, that is those not used by any RuleSet.
   o Rule JUnit tests should verify the Test class follows expected naming
     conventions just like the Rules need to.
   o Need to organize the ruleset XML files based upon Language.  Need to come
     up with a solution for the "rulesets.properties" files.

---

This version of PMD breaks API compatibility with prior versions of PMD, as well
as RuleSet XML compatibility.  The decision to break compatibility, allows PMD
internals and code organization to be improved to better handle additional
languages.  This opportunity was used to remove depreciated APIs, and beat up
any code which has thumbed its nose at the developers over the years. ;)

The following is relatively complete list of the major changes:

	API Change - Unification of treatment of languages within PMD core:
	   Added - net.sourceforge.pmd.lang.Language (now an 'enum')
	   Added - net.sourceforge.pmd.lang.LanguageVersion
	   Added - net.sourceforge.pmd.lang.LanguageVersionDiscoverer
	   Added - net.sourceforge.pmd.lang.LanguageVersionHandler
	   Added - net.sourceforge.pmd.lang.ast.AbstractTokenManager
	   Added - net.sourceforge.pmd.lang.ast.CharStream
	   Added - net.sourceforge.pmd.lang.ast.JavaCharStream
	   Added - net.sourceforge.pmd.lang.ast.SimpleCharStream
	   Added - net.sourceforge.pmd.lang.ast.TokenMgrError
	   Added - net.sourceforge.pmd.lang.rule.stat.StatisticalRule