@@ -5,10 +5,12 @@ import java.io.Writer;
 import net.sourceforge.pmd.dfa.DataFlowFacade;
 import net.sourceforge.pmd.lang.LanguageVersionHandler;
 import net.sourceforge.pmd.lang.VisitorStarter;
+import net.sourceforge.pmd.lang.XPathFunctionRegister;
 import net.sourceforge.pmd.lang.ast.Node;
 import net.sourceforge.pmd.lang.java.ast.ASTCompilationUnit;
 import net.sourceforge.pmd.lang.java.ast.DumpFacade;
 import net.sourceforge.pmd.lang.java.ast.JavaNode;
+import net.sourceforge.pmd.lang.java.jaxen.TypeOfFunction;
 import net.sourceforge.pmd.lang.java.rule.JavaRuleViolationFactory;
 import net.sourceforge.pmd.lang.rule.RuleViolationFactory;
 import net.sourceforge.pmd.symboltable.SymbolFacade;
@@ -21,6 +23,14 @@ import net.sourceforge.pmd.typeresolution.TypeResolutionFacade;
  * @author pieter_van_raemdonck - Application Engineers NV/SA - www.ae.be
  */
 public abstract class AbstractJavaHandler implements LanguageVersionHandler {
+
+    public XPathFunctionRegister getXPathFunctionRegister() {
+	return new XPathFunctionRegister() {
+	    public void register() {
+		TypeOfFunction.registerSelfInSimpleContext();
+	    }
+	};
+    }
 
     public RuleViolationFactory getRuleViolationFactory() {
 	return JavaRuleViolationFactory.INSTANCE;
