@@ -13,8 +13,7 @@ import java.util.Map.Entry;
 
 import net.sourceforge.pmd.RuleContext;
 import net.sourceforge.pmd.jaxen.DocumentNavigator;
-import net.sourceforge.pmd.jaxen.MatchesFunction;
-import net.sourceforge.pmd.jaxen.TypeOfFunction;
+import net.sourceforge.pmd.jaxen.Functions;
 import net.sourceforge.pmd.lang.ast.Node;
 
 import org.jaxen.BaseXPath;
@@ -42,8 +41,7 @@ public class XPathRule extends AbstractRule {
 
     // Mapping from Node name to applicable XPath queries
     private Map<String, List<XPath>> nodeNameToXPaths;
-    private boolean regexpFunctionRegistered;
-    private boolean typeofFunctionRegistered;
+    private boolean functionsRegistered;
 
     private static final String AST_ROOT = "_AST_ROOT_";
 
@@ -88,14 +86,9 @@ public class XPathRule extends AbstractRule {
             return;
         }
 
-        if (!regexpFunctionRegistered) {
-            MatchesFunction.registerSelfInSimpleContext();
-            regexpFunctionRegistered = true;
-        }
-
-        if (!typeofFunctionRegistered) {
-            TypeOfFunction.registerSelfInSimpleContext();
-            typeofFunctionRegistered = true;
+        if (!functionsRegistered) {
+            Functions.registerAll();
+            functionsRegistered = true;
         }
 
         //
