@@ -1,7 +1,6 @@
 package net.sourceforge.pmd.util.viewer;
 
-import net.sourceforge.pmd.jaxen.MatchesFunction;
-import net.sourceforge.pmd.jaxen.TypeOfFunction;
+import net.sourceforge.pmd.jaxen.Functions;
 import net.sourceforge.pmd.util.viewer.gui.MainFrame;
 
 /**
@@ -12,8 +11,7 @@ import net.sourceforge.pmd.util.viewer.gui.MainFrame;
  */
 public class Viewer {
     public static void main(String[] args) {
-        MatchesFunction.registerSelfInSimpleContext();
-        TypeOfFunction.registerSelfInSimpleContext();
+	Functions.registerAll();
         new MainFrame();
     }
 }
